--- a/style.css
+++ b/style.css
@@ -3,3 +3,55 @@ body {
     margin: unset;
     padding: unset;
 }
+
+h1 {
+    margin: unset;
+    font-size: unset;
+    font-weight: unset;
+}
+
+/*Typograph*/
+:root {
+    font-family: 'Arial';
+}
+
+/* Design */
+body {
+    background-color: #D9D9D9;
+}
+
+
+.food-header {
+    box-shadow: inset 0 0 10px blue;
+    background-color: white;
+    height: 160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header_wrapper {
+    width: 960px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_wrapper h1 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #FF6600;
+}
+
+.header_wrapper img {
+    width: 124px;
+}
+
+.food-main {
+    box-shadow: inset 0 0 10px green;
+}
+
+.food-footer {
+    box-shadow: inset 0 0 10px yellow;
+}
