--- a/style.css
+++ b/style.css
@@ -14,6 +14,44 @@ li {
     list-style: none;
 }
 
+/* Grid */
+.l_col_12_12 {
+    width: 100%;
+}
+.l_col_11_12 {
+    width: calc(100% * (11 / 12));
+}
+.l_col_10_12 {
+    width: calc(100% * (10 / 12));
+}
+.l_col_9_12 {
+    width: calc(100% * (9 / 12));
+}
+.l_col_8_12 {
+    width: calc(100% * (8 / 12));
+}
+.l_col_7_12 {
+    width: calc(100% * (7 / 12));
+}
+.l_col_6_12 {
+    width: calc(100% * (6 / 12));
+}
+.l_col_5_12 {
+    width: calc(100% * (5 / 12));
+}
+.l_col_4_12 {
+    width: calc(100% * (4 / 12));
+}
+.l_col_3_12 {
+    width: calc(100% * (3 / 12));
+}
+.l_col_2_12 {
+    width: calc(100% * (2 / 12));
+}
+.l_col_1_12 {
+    width: calc(100% * (1 / 12));
+}
+
 /*Typograph*/
 :root {
     font-family: 'Arial';
@@ -36,6 +74,7 @@ body {
 .l_wrapper {
     width: 960px;
     margin: 0 auto;
+    box-shadow: inset 0 0 10px red;
 }
 
 .header {
@@ -56,14 +95,24 @@ body {
 
 .food-main {
     box-shadow: inset 0 0 10px green;
-    margin: 30px 0;
-    display: flex;
-    
+    padding: 30px 0;
 }
 
-.food-main .contents {
+.contents {
+
+}
+
+.l_row {
+    display: flex;
+    margin: 0 -15px
+}
+
+.l_col {
+    padding: 0 15px;
+}
+
+.card {
     background-color: aqua;
-    flex-grow: 1;
 }
 
 .food-footer {
