--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* Reset */
-body, ul {
+body, ul, p {
     margin: unset;
     padding: unset;
 }
 
-h1 {
+h1, h2 {
     margin: unset;
     font-size: unset;
     font-weight: unset;
@@ -112,8 +112,91 @@ body {
 }
 
 .card {
-    background-color: aqua;
+    border-radius: 12px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    min-height: 0;
 }
+
+.card_header {
+    background-image: url(./images/pic01.png);
+    background-size: cover;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex-shrink: 0;
+}
+
+
+.card_header h2 {
+    padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #FF6600;
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 0 12px 0 0 ;
+    width: fit-content;
+}
+
+
+
+.card_contents {
+    padding: 20px;
+    color: #666666;
+    font-size: 14px;
+    background-color: white;
+}
+
+.card_contents p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display:-webkit-box;
+    -webkit-box-orient:vertical;
+    -webkit-line-clamp: 6;
+}
+
+.card_contents strong {
+    color: #FF6600;
+}
+
+.card_tag {
+    height: 74px;
+    background-color: #F4F4F4;
+    line-height: 74px;
+    padding: 0 18px;
+    flex-shrink: 0;
+}
+
+.card_tag span {
+    font-family: 'Noto Sans CJK KR';
+    font-size: 12px;
+    color: white;
+    background-color: #FF6600;
+    padding: 3px 8px;
+    border-radius: 48px;
+}
+
+/* .card_header img {
+    width: 100%;
+    position: relative;
+} */
+
+/* .card_header h2 {
+    padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #FF6600;
+    width: fit-content;
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 0 12px 0 0 ;
+    position: absolute;
+    top: 342px;
+    left: 215px;
+} */
+
 
 .food-footer {
     box-shadow: inset 0 0 10px yellow;
