--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ body {
 .l_wrapper {
     width: 960px;
     margin: 0 auto;
-    box-shadow: inset 0 0 10px red;
 }
 
 .header {
@@ -94,7 +93,6 @@ body {
 }
 
 .food-main {
-    box-shadow: inset 0 0 10px green;
     padding: 30px 0;
 }
 
@@ -120,6 +118,7 @@ body {
     min-height: 0;
 }
 
+
 .card_header {
     background-image: url(./images/pic01.png);
     background-size: cover;
@@ -140,8 +139,6 @@ body {
     border-radius: 0 12px 0 0 ;
     width: fit-content;
 }
-
-
 
 .card_contents {
     padding: 20px;
@@ -197,6 +194,37 @@ body {
     left: 215px;
 } */
 
+.burger .card_header {
+    background-image: url(./images/pic02.png);
+}
+
+.burger .card_header h2 {
+    color: #17A651;
+}
+
+.burger .card_contents strong {
+    color: #17A651;
+}
+
+.burger .card_tag span {
+    background-color: #17A651;
+}
+
+.pizza .card_header {
+    background-image: url(./images/pic03.png);
+}
+
+.pizza .card_header h2 {
+    color: #0075FF;
+}
+
+.pizza .card_contents strong {
+    color: #0075FF;
+}
+
+.pizza .card_tag span {
+    background-color: #0075FF;
+}
 
 .food-footer {
     box-shadow: inset 0 0 10px yellow;
