--- a/style.css
+++ b/style.css
@@ -96,10 +96,6 @@ body {
     padding: 30px 0;
 }
 
-.contents {
-
-}
-
 .l_row {
     display: flex;
     margin: 0 -15px
@@ -230,4 +226,65 @@ body {
     font-size: 12px;
     letter-spacing: 0.24em;
     color: #AAAAAA
+}
+
+@media screen and (max-width: 600px) {
+    .l_wrapper {
+        width: 100%;
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    .l_row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 30px;
+    }
+    
+    .l_col_tablet_12_12 {
+        width: 100%;
+    }
+    .l_col_tablet_11_12 {
+        width: calc(100% * (11 / 12));
+    }
+    .l_col_tablet_10_12 {
+        width: calc(100% * (10 / 12));
+    }
+    .l_col_tablet_9_12 {
+        width: calc(100% * (9 / 12));
+    }
+    .l_col_tablet_8_12 {
+        width: calc(100% * (8 / 12));
+    }
+    .l_col_tablet_7_12 {
+        width: calc(100% * (7 / 12));
+    }
+    .l_col_tablet_6_12 {
+        width: calc(100% * (6 / 12));
+    }
+    .l_col_tablet_5_12 {
+        width: calc(100% * (5 / 12));
+    }
+    .l_col_tablet_4_12 {
+        width: calc(100% * (4 / 12));
+    }
+    .l_col_tablet_3_12 {
+        width: calc(100% * (3 / 12));
+    }
+    .l_col_tablet_2_12 {
+        width: calc(100% * (2 / 12));
+    }
+    .l_col_tablet_1_12 {
+        width: calc(100% * (1 / 12));
+    }
+
+    .footer {
+        text-align: center;
+    }
+    
 }
